# dragons-labyrinth

./: .bevy-agent.json  .clinerules  .envrc  .gitattributes  .gitignore  .replit  ARCHITECTURE-REVELATION.md  ARCHITECTURE_DECISION.md  ASSET-STRATEGY-PROCEDURAL.md  Cargo.toml  DALL-E_ASSET_GENERATION_LIST.md  DATABASE_REPLACEMENT_STRATEGY.md  ENTITIES_OPTIMIZATION_PLAN.md  Justfile  NPCs.txt  OPENRPG_ADAPTATION_PLAN.md  PIPELINE_ARCHITECTURE.md  PROJECT-COMPLETE-VISION.md  PROJECT-STATE-YOLO-ASSESSMENT.md  PROJECT-VISION-COMPLETE.md  README.md  RUST_ANALYSIS_IMPLEMENTATION_PLAN.md  TRUE-ARCHITECTURE.md  Trunk.toml  analysis_comparison_report.md  bevy-agent-spec.md  bevy_migration_plan.md  build.sh  build_audio.rs  cliff.toml  generation_manifest.json  implementation_plan.md  index.html  package-lock.json  package.json  plug.gd  plug.gd.uid  production_handoff.md  project.godot  pyproject.toml  (+12 more)
apps/game/: Cargo.toml  Trunk.toml  build.rs  index.html
apps/game/.cargo/: config.toml
apps/game/assets/: Themes_1756761200911.md  split-assets-prompt-design_1756761186935.md
apps/game/src/: game.rs  lib.rs  main.rs  spatial.rs
apps/game/templates/: generated_world.rs.template  hex_specific_module.rs.jinja2
crates/ai/: Cargo.toml
crates/ai-bridge/: Cargo.toml  README.md
crates/ai-bridge/src/: agent_executor.rs  agent_spec.rs  context.rs  error.rs  generation.rs  lib.rs  mcp_client.rs  memory.rs  orchestrator.rs  prompt_loader.rs  prompt_optimizer.rs  tools.rs
crates/ai/src/: behaviors.rs  lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio-bridge/: Cargo.toml
crates/blender-bridge/: Cargo.toml  blender-config.toml
crates/blender-bridge/src/: batch.rs  conversion.rs  error.rs  hashing.rs  lib.rs  manifest.rs  project.rs  ron_models.rs  simple_gltf.rs  template_processor.rs
crates/blender-bridge/templates/: companion.py.j2  fps_dungeon_room.py.j2  fps_monster.py.j2  hex_tile.py.j2  overworld_tiles.py.j2
crates/build_tools/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: components.rs  lib.rs  resources.rs
crates/database-orm/: Cargo.toml
crates/database-orm/src/: ai_workflows.rs  companions.rs  decay.rs  encounters.rs  game_states.rs  hex_tiles.rs  lib.rs  mounts.rs  settlements.rs
crates/dl_analysis/: Cargo.toml  build.rs
crates/dl_analysis/examples/: generate_reports.rs  production_audit.rs  test_comprehensive_validation.rs  test_data_validation_simple.rs  test_hbf_extraction.rs  test_structured_data_audit.rs
crates/dl_analysis/src/: ai_analysis.rs  audit.rs  audit_types.rs  build_api.rs  clusters.rs  containers.rs  dungeons.rs  entities.rs  factions.rs  generators.rs  lib.rs  orchestration.rs  raw.rs  regions.rs  reporting.rs  results.rs  settlements.rs  templates.rs
crates/dl_analysis/templates/: regions_analysis.j2
crates/dl_audit/: Cargo.toml
crates/dl_audit/examples/: hbf_coverage_audit.rs
crates/dl_audit/src/: archive.rs  dataframe.rs  lib.rs  reports.rs  system.rs
crates/dl_processors/: Cargo.toml  build.rs
crates/dl_processors/examples/: generate_dialogue_and_quests.rs
crates/dl_processors/src/: ai_dialogue.rs  audit.rs  build_api.rs  components.rs  containers.rs  dungeons.rs  factions.rs  generators.rs  lib.rs  regions.rs  settlements.rs  templates.rs  utilities.rs
crates/dl_processors/templates/: complete_world_system.rs.jinja2  dungeon_area.rs.jinja2  hex_tile.rs.jinja2  region_module.rs.jinja2  world_integration.rs.jinja2
crates/dl_seeds/: Cargo.toml  build.rs  build_config.toml  game.hbf
crates/dl_seeds/hbf_analysis/: factions.json  settlements.json
crates/dl_seeds/hbf_analysis_comprehensive/: characters.json  creatures.json  dungeons.json  factions.json  items.json  regions.json  settlements.json  spells.json
crates/dl_seeds/hbf_analysis_enhanced/: characters.json  creatures.json  dungeons.json  factions.json  regions.json  settlements.json  spells.json
crates/dl_seeds/hbf_analysis_fixed/: factions.json  settlements.json
crates/dl_seeds/hbf_analysis_improved/: factions.json  settlements.json
crates/dl_seeds/src/: ai_analysis.rs  ai_client.rs  audit.rs  books.rs  build_api.rs  components.rs  containers.rs  data_pools.rs  dataframe.rs  dialogue.rs  dungeons.rs  entities.rs  factions.rs  lib.rs  linguistics.rs  mod.rs  orchestration.rs  regions.rs  reporting.rs  runtime_analysis.rs  seeds_logic.rs  settlements.rs  templates.rs  utilities.rs
crates/dl_seeds/templates/: components.rs.jinja2  dialogue_module.rs.jinja2  dungeon_module.rs.jinja2  factions_analysis.j2  npc_dialogue.rs.jinja2  region_ecs.rs.jinja2  systems.rs.jinja2
crates/dl_types/: Cargo.toml
crates/dl_types/src/: lib.rs
crates/dragons-docs/: Cargo.toml  book.toml  build.rs
crates/dragons-docs/book/: SUMMARY.md
crates/dragons-docs/src/: changelog.rs  lib.rs
crates/dragons-docs/theme/: book.js
crates/game/: Cargo.toml
crates/game-assets/: Cargo.toml  README.md  build.rs  rules.toml
crates/game-assets/prompts/: audio_specs.toml  decay_specs.toml  dialogue_specs.toml  level_specs.toml  map_specs.toml  narrative_specs.toml  orchestration.toml  ui_specs.toml
crates/game-assets/requests/: dungeons.toml  weapons.toml
crates/game-assets/src/: asset_intelligence.rs  characters.rs  lib.rs
crates/game-content-generated/: Cargo.toml
crates/game-content-static/: Cargo.toml
crates/game-database/: Cargo.toml  README.md  build.rs
crates/game-database/src/: lib.rs  (+9 more)
crates/game-dialogue/: Cargo.toml  agent.toml
crates/game-engine/: Cargo.toml  README.md  build.rs
crates/hbf-parser/: Cargo.toml  build.rs
crates/hexroll-transformer/: CHAT_ARCHIVE.md  Cargo.toml  HBF.md  README-1.md  README.md
crates/hexroll_exporter/: COMPLETE_DATA_UNDERSTANDING.md  COMPLETE_EXTRACTION_PLAN.md  Cargo.toml  agent.toml  hbf_analysis.json  test_toml_load.rs  transformation_agent.toml
dragons_labyrinth_bevy/: .envrc  Cargo.toml  Cargo.toml.full  build.sh  build_wasm.sh  run.sh  rust-toolchain.toml  setup_env.sh
dragons_labyrinth_bevy/src/: main.rs  systems.rs
rev2/: Cargo.toml  README.md
(+12944 files in other folders)
