[workspace]
members = ["apps/game", "crates/procgen", "crates/builder"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
name = "bevy-worldbuilder"

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["bevy_sprite", "bevy_text", "bevy_ui"] }
bevy_ecs_tilemap = "0.16.0"
avian2d = "0.3.1"
mapgen = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
thiserror = "2.0"
chrono = "0.4"
clap = "4.5"
config = "0.15"
dirs = "6.0"
handlebars = "6.3"
md5 = "0.8"
procgen = { path = "crates/procgen" }
quote = "1.0"
reqwest = "0.12"
syn = "2.0"
tempfile = "3.21"
tokio = "1.47"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.18"
walkdir = "2.5"
world = { path = "crates/world" }
openai_dive = "1.2.4"
minijinja = { version = "2.5", features = ["loader"] }
