[workspace]
members = [
    "apps/game",
    "crates/dl_analysis",
    "crates/dl_processors", 
    "crates/dl_seeds",
    "crates/dl_types",
    "crates/dl_audit",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Dragon's Labyrinth Team"]
license = "MIT"
repository = "https://github.com/jbcom/dragons-labyrinth"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.11"
toml = "0.9"

# AI and tokenization
openai_dive = "1.2"
tiktoken-rs = "0.7"
tokio = { version = "1.47", features = ["full"] }

# Database
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
regex = "1.11"
lazy_static = "1.5"
rayon = "1.11"
glob = "0.3"
walkdir = "2.5"
rand = "0.9"
rand_chacha = "0.9"

# HTML/JSON processing
scraper = "0.24"
html5ever = "0.35"
ammonia = "4.1"

# File system
fs_extra = "1.3"
tempfile = "3.21"

# Build dependencies
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
bevy = "0.16.1"
bevy_cobweb = "0.17"
bevy_cobweb_ui = "0.21"
bevy_ecs_tilemap = "0.16"
bevy_rand = { version = "0.11", features = ["wyrand"] }
bevy_yarnspinner = "0.5"
chrono = "0.4"
cleasby_vigfusson_dictionary = "1.1.0"
csv = "1.3"
dl_analysis = { path = "crates/dl_analysis" }
dl_processors = { path = "crates/dl_processors" }
dl_seeds = { path = "crates/dl_seeds" }
dl_types = { path = "crates/dl_types" }
dl_audit = { path = "crates/dl_audit" }
iars = "0.1.0"
minijinja = "2.12"
reqwest = "0.12"
urlencoding = "2.1"
bevy_animation = "0.16.1"
bevy_asset = "0.16.1"
bevy_color = "0.16.2"
bevy_ecs = "0.16.1"
bevy_math = "0.16.1"
bevy_scene = "0.16.1"
bevy_transform = "0.16.1"
flate2 = "1.1"
polars = "0.50.0"
rust-bert = "0.23.0"
tar = "0.4"
tera = "1.20"
console = "0.16.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
