[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dragons-labyrinth"
dynamic = ["version"]
description = "Dragon's Labyrinth"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
keywords = []
authors = [
  { name = "Jon Bogaty", email = "jon@flipsidecrypto.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "rich>=14.1.0,
  "jinja2>=3.1.6",
  "tiktoken>=0.11.0",
  "typer>=0.16.0",
  "openai>=1.101.0",
  "pillow>=11.3.0",
  "psutil>=7.0.0",
  "xdg-base-dirs>=6.0.2",
]

[tool.hatch.build]
include = [
  "src/dragons_labyrinth/workflows/asset_generation/prompts/**",
  "src/dragons_labyrinth/workflows/asset_generation/templates/**",
  "src/dragons_labyrinth/workflows/code_generation/specs/**",
]

[project.scripts]
dl_cli = "dragons_labyrinth.__main__:main"

[project.urls]
Documentation = "https://github.com/jbcom/dragons-labyrinth#readme"
Issues = "https://github.com/jbcom/dragons-labyrinth/issues"
Source = "https://github.com/jbcom/dragons-labyrinth"

[tool.hatch.version]
path = "src/dragons_labyrinth/__init__.py"

[tool.uv]
required-version = ">=0.5.0"

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dragons_labyrinth tests}"

[tool.coverage.run]
source_pkgs = ["dragons_labyrinth", "tests"]
branch = true
parallel = true
omit = [
  "src/dragons_labyrinth/__init__.py",
]

[tool.coverage.paths]
dragons_labyrinth = ["src/dragons_labyrinth", "*/dragons-labyrinth/src/dragons_labyrinth"]
tests = ["tests", "*/dragons-labyrinth/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
