[project]
name = "arcade-cabinet-python-app"
version = "0.1.0"
description = "A new arcade cabinet game in Python"
authors = [{name = "Arcade Cabinet Team"}]
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
