[package]
name = "dragons_labyrinth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Bevy - using compatible version
bevy = { version = "0.11", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "png", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Hex grid system
hexx = { version = "0.11", features = ["algorithms"] }

# For parallel processing
rayon = "1.7"

# For concurrent data structures
dashmap = "5.5"

# Image processing for sprite generation
image = "0.24"

# Advanced concurrency
crossbeam = "0.8"

# Fast hashing
blake3 = "1.5"

# LRU cache for asset management
lru = "0.12"

# Color management
palette = "0.7"

# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

# Progress indicators
indicatif = "0.17"

# Colored output
colored = "2.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1