[package]
name = "dragons_labyrinth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Bevy - compatible with Rust 1.77.2
bevy = { version = "=0.13.2", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "png", "x11"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
rand = "=0.8.5"

# Hex grid system
hexx = { version = "=0.18.0", features = ["algorithms"] }

# Map generation
mapgen = "=0.5.2"

# Basic database
rusqlite = { version = "=0.31.0", features = ["bundled"] }

# Async runtime  
tokio = { version = "=1.35.1", features = ["rt", "macros"] }

# Progress indicators
indicatif = "0.17"

# Colored output
colored = "2.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1