[workspace]
members = ["apps/game", "crates/world", "crates/procgen", "tools/agent_bridge"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = true }
bevy_ecs_tilemap = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
mapgen = "0.6.0"
thiserror = "1.0"
