[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_dev_tools", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Additional game crate deps brought from merged root crate
bevy_ecs_tilemap = "0.16"
avian3d = "0.3"
bevy_cobweb = "0.17"
bevy_cobweb_ui = "0.21"
bevy_yarnspinner = "0.5"
bevy-yoleck = "0.28"
bevy_egui = "0.36"
mapgen = "0.6"
ron = "0.11"
noise = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
