[package]
name = "game"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
# Core deps from workspace
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ron = { workspace = true }

# Game-specific dependencies
bevy = { version = "0.16.1", features = ["bevy_dev_tools", "png"] }
bevy_ecs_tilemap = "0.16"
bevy_rand = "0.11"

# Additional game crate deps
avian3d = "0.3"
bevy_cobweb = "0.17"
bevy_cobweb_ui = "0.21"
bevy_yarnspinner = "0.5"
bevy-yoleck = "0.28"
bevy_egui = "0.36"
mapgen = "0.6"
noise = "0.9"

# WASM-specific deps (only included when building for wasm)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[build-dependencies]
dl_processors = { path = "../../crates/dl_processors" }
dl_analysis = { path = "../../crates/dl_analysis" }
anyhow = { workspace = true }
