[package]
name = "game"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "game"
path = "src/main.rs"
required-features = []

[dependencies]
# Core deps from workspace
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ron = { workspace = true }
dl_types = { workspace = true }

# Game-specific dependencies
bevy = { workspace = true, features = ["bevy_dev_tools", "png"] }
bevy_ecs_tilemap = { workspace = true }
bevy_rand = { workspace = true }

# UI and dialogue systems only (everything else is in .cob files or HBF data)
bevy_cobweb = { workspace = true }
bevy_cobweb_ui = { workspace = true }
bevy_yarnspinner = { workspace = true }

# WASM-specific deps (only included when building for wasm)
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { workspace = true, features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[build-dependencies]
dl_processors = { workspace = true }
dl_analysis = { workspace = true }
anyhow = { workspace = true }
