[package]
name = "ai-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI coordination and generation bridge for Dragon's Labyrinth"

[lib]
name = "ai_bridge"
path = "src/lib.rs"

[[bin]]
name = "overnight-generator"
path = "src/bin/overnight-generator.rs"

[dependencies]
game-database = { path = "../game-database", optional = true }

# OpenAI and AI integration
openai_dive = "1.2"
tiktoken-rs = "0.7"
async-trait = "0.1"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and output
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

# File system
walkdir = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }

# Additional dependencies for our modules
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP client for runtime intelligence queries
jsonrpc-core = "18.0"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
with-database = ["game-database"]
