[package]
name = "ai-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure AI coordination and generation bridge - standalone library"

[lib]
name = "ai_bridge"
path = "src/lib.rs"

[dependencies]
# ZERO internal crate dependencies - pure bridge infrastructure
# ALWAYS uses OpenAI - no optional features

# OpenAI and AI integration - ALWAYS included
openai_dive = { workspace = true }
tiktoken-rs = { workspace = true }
async-trait = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization and Configuration
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and output
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

# File system
walkdir = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }

# Additional utilities
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
