[package]
name = "audio-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Audio generation bridge for music21, freesound, and TTS integration"

[lib]
name = "audio_bridge"
path = "src/lib.rs"

[dependencies]
# Audio processing
rodio = { version = "0.21", features = ["vorbis", "wav", "mp3"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File system utilities
walkdir = { workspace = true }

# HTTP client for freesound API integration
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1.18", features = ["v4", "serde"] }
