[package]
name = "blender-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
pyo3 = { workspace = true }
lazy_static = { workspace = true }
xdg = { workspace = true }
ron = { workspace = true }
# Template and configuration support
minijinja = { workspace = true }
toml = { workspace = true }
