[package]
name = "dl_analysis"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
openai_dive = { workspace = true }
tiktoken-rs = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
scraper = { workspace = true }
html5ever = { workspace = true }
ammonia = { workspace = true }
fs_extra = { workspace = true }
tempfile = { workspace = true }
minijinja = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
dl_seeds = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dl_seeds = { workspace = true }
