[package]
name = "dl_analysis"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Our types and utilities
dl_types = { path = "../dl_types" }
dl_audit = { path = "../dl_audit" }

# AI integration - using same library as dl_processors
openai_dive = "1.2"
tokio = { version = "1", features = ["full"] }

# Database access for HBF
rusqlite = "0.34.0"

# File operations
walkdir.workspace = true
ron = "0.8"
csv = "1.3"

# Template processing  
tera = "1.20"

[build-dependencies]
anyhow.workspace = true
dl_seeds = { path = "../dl_seeds" }
ron = "0.8"
