[package]
name = "dl_analysis"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Our types and utilities
dl_types = { workspace = true }
dl_audit = { workspace = true }

# AI integration - using same library as dl_processors
openai_dive = { workspace = true }
tokio = { workspace = true, features = ["full"] }


# File operations
walkdir.workspace = true
ron = { workspace = true }
csv = { workspace = true }

# Template processing  
tera = { workspace = true }

[build-dependencies]
anyhow.workspace = true
dl_seeds = { workspace = true }
ron = { workspace = true }
