[package]
name = "dl_audit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Polars for DataFrame functionality
polars = { version = "0.50.0", features = ["lazy", "csv", "strings", "temporal", "regex", "timezones"] }

# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Our unified types
dl_types = { path = "../dl_types" }

# File system and archiving
fs_extra.workspace = true
flate2 = "1.0" 
tar = "0.4"
walkdir.workspace = true
regex.workspace = true
