[package]
name = "dl_audit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Polars for DataFrame functionality
polars = { workspace = true, features = ["lazy", "csv", "strings", "temporal", "regex", "timezones"] }

# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Our unified types
dl_types = { workspace = true }

# File system and archiving
fs_extra.workspace = true
flate2 = { workspace = true } 
tar = { workspace = true }
walkdir.workspace = true
regex.workspace = true
