[package]
name = "dl_processors"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
scraper = { workspace = true }
ammonia = { workspace = true }
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
minijinja = { workspace = true, features = ["loader"] }
openai_dive = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dl_analysis = { workspace = true }
dl_seeds = { workspace = true }
dl_types = { path = "../dl_types" }

[build-dependencies]
dl_analysis = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
