[package]
name = "dl_processors"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Our types and utilities
dl_types = { path = "../dl_types" }
dl_analysis = { path = "../dl_analysis" }
dl_audit = { path = "../dl_audit" }

# Template processing
tera = "1.20"

# File operations
ron = "0.8"
walkdir.workspace = true

[build-dependencies]
anyhow.workspace = true
dl_analysis = { path = "../dl_analysis" }
