[package]
name = "dl_processors"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Our types and utilities
dl_types = { workspace = true }
dl_analysis = { workspace = true }
dl_audit = { workspace = true }

# Template processing
tera = { workspace = true }
minijinja = { workspace = true }

# AI integration - using newer compatible version
openai_dive = { workspace = true }

# Text processing
regex.workspace = true

# File operations
ron = { workspace = true }
walkdir.workspace = true

[build-dependencies]
anyhow.workspace = true
walkdir.workspace = true
dl_analysis = { workspace = true }
dl_audit = { workspace = true }
dl_types = { workspace = true }
