[package]
name = "dl_seeds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = { workspace = true }
iars = { workspace = true }
cleasby_vigfusson_dictionary = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
regex = { workspace = true }

[build-dependencies]
tempfile = { workspace = true }
