[package]
name = "dl_seeds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
regex = { workspace = true }
openai_dive = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }

[build-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = { workspace = true }
serde_json = { workspace = true }
rust-bert = { workspace = true, features = ["download-libtorch"] }
console = { workspace = true, features = ["std"] }
iars = { git = "https://github.com/bigbass1997/iars.git" }
cleasby_vigfusson_dictionary = { workspace = true }
chrono = { workspace = true }
tch = "0.17.0"
