[package]
name = "dl_seeds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# HTTP and URL handling
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# File operations and utilities
tempfile = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
fs_extra = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

# Data formats
toml = { workspace = true }
ron = { workspace = true }
csv = { workspace = true }

# AI integration
openai_dive = { workspace = true }

# Template processing (consolidated from dl_analysis + dl_processors)
tera = { workspace = true }
minijinja = { workspace = true }

# DataFrame functionality (from dl_audit)
polars = { workspace = true, features = ["lazy", "csv", "strings", "temporal", "regex", "timezones"] }


[build-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = { workspace = true }
serde_json = { workspace = true }
rust-bert = { workspace = true, features = ["download-libtorch"] }
console = { workspace = true, features = ["std"] }
iars = { git = "https://github.com/bigbass1997/iars.git" }
cleasby_vigfusson_dictionary = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tch = "0.17.0"
